--- a/0-index.html
+++ b/0-index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<body style="margin:0;padding:0;">
-	<header style="color:#FF0000;height:70px;width:100%;"></header>
-	<footer style="color:#00FF00;height:60px;width:100%">
-	<p style="margin:0 auto">Best School</>
-	</footer>
+<html>
+<body style="margin:0;padding:0">
+        <header style="color:#FF0000;height:70px;width:100%"></header>
+        <footer style="color:#00FF00;height:60px;width:100%">
+        <p style="margin:0 auto">Best School</p>
+        </footer>
 </body>
+</html>
