--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -7,6 +7,7 @@
                 <link rel="stylesheet" href="styles/3-header.css" type="text/css">
                 <link rel="stylesheet" href="styles/3-footer.css" type="text/css">
                 <link rel="stylesheet" href="styles/6-filters.css" type="text/css">
+                <link rel="stylesheet" href="styles/7-places.css" type="text/css">
                 <link rel="icon" href="images/icon.png" type="image/png">
         </head>
         <body>
@@ -50,6 +51,18 @@
                         <button>search</button>
                     </section>
                 </div>
+                <section class="places">
+                    <h1>Places</h1>
+                    <article>
+                        <h2>My Home</h2>
+                    </article>
+                    <article>
+                        <h2>Our Home</h2>
+                    </article>
+                    <article>
+                        <h2>Your Home</h2>
+                    </article>
+                </section>
                 <footer>
                         <p>Best School</p>
                 </footer>
