--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -61,91 +61,65 @@
         <h1>Places</h1>
         <article>
             <h2>My Home</h2>
-            <div class="price_by_night"></div>
+            <div class="price_by_night">$180</div>
             <div class="information">
                 <div class="max_quest">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
-                <div class="number_rooms">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
-                <div class="number_bathrooms">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
+                    <h4>2 Guests</h4></div>
+                <div class="number_rooms"><h4>4 Rooms</h4></div>
+                <div class="number_bathrooms"><h4>2 Rooms</h4></div>
             </div>
             <div class="user">
-                <p><b>Owner: Lorem, ipsum dolor.</b></p>
+                <p><b>Owner:</b> Lorem, ipsum</p>
             </div>
             <div class="description">
-                <p>Lorem, ipsum dolor sit amet consectetur 
-                    adipisicing elit. A laborum sequi nihil nisi 
-                    laudantium, molestiae eaque porro incidunt excepturi, 
-                    optio aliquam ipsa repellat est? Doloremque, eaque sed. 
-                    Ex deserunt laudantium eaque necessitatibus ullam veniam 
-                    accusamus, quo recusandae esse. Minus et ducimus quasi amet quam 
+                <p>Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. A laborum sequi nihil nisi
+                    laudantium, molestiae eaque porro incidunt excepturi,
+                    optio aliquam ipsa repellat est? Doloremque, eaque sed.
+                    Ex deserunt laudantium eaque necessitatibus ullam veniam
+                    accusamus, quo recusandae esse. Minus et ducimus quasi amet quam
                     nam unde, porro reiciendis delectus magnam?</p>
             </div>
         </article>
         <article>
             <h2>Our Home</h2>
-            <div class="price_by_night"></div>
+            <div class="price_by_night">£45</div>
             <div class="information">
-                <div class="max_quest">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
-                <div class="number_rooms">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
-                <div class="number_bathrooms">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
+                <div class="max_quest"><h4>2 Guests</h4></div>
+                <div class="number_rooms"><h4>4 Rooms</h4></div>
+                <div class="number_bathrooms"><h4>3 Bathrooms</h4></div>
             </div>
             <div class="user">
-                <p><b>Owner: Lorem, ipsum dolor.</b></p>
+                <p><b>Owner:</b> Lorem, ipsum</p>
             </div>
             <div class="description">
-                <p>Lorem, ipsum dolor sit amet consectetur 
-                    adipisicing elit. A laborum sequi nihil nisi 
-                    laudantium, molestiae eaque porro incidunt excepturi, 
-                    optio aliquam ipsa repellat est? Doloremque, eaque sed. 
-                    Ex deserunt laudantium eaque necessitatibus ullam veniam 
-                    accusamus, quo recusandae esse. Minus et ducimus quasi amet quam 
+                <p>Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. A laborum sequi nihil nisi
+                    laudantium, molestiae eaque porro incidunt excepturi,
+                    optio aliquam ipsa repellat est? Doloremque, eaque sed.
+                    Ex deserunt laudantium eaque necessitatibus ullam veniam
+                    accusamus, quo recusandae esse. Minus et ducimus quasi amet quam
                     nam unde, porro reiciendis delectus magnam?</p>
             </div>
         </article>
         <article>
             <h2>Your Home</h2>
-            <div class="price_by_night"></div>
+            <div class="price_by_night">$57</div>
             <div class="information">
-                <div class="max_quest">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
-                <div class="number_rooms">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
-                <div class="number_bathrooms">
-                    <p>Lorem ipsum dolor sit.</p>
-                    <div class="icon"></div>
-                </div>
+                <div class="max_quest"><h4>4 Guests</h4></div>
+                <div class="number_rooms"><h4>7 Rooms</h4></div>
+                <div class="number_bathrooms"><h4>3 Bathrooms</h4></div>
             </div>
             <div class="user">
-                <p><b>Owner: Lorem, ipsum dolor.</b></p>
+                <p><b>Owner:</b> Lorem, ipsum</p>
             </div>
             <div class="description">
-                <p>Lorem, ipsum dolor sit amet consectetur 
-                    adipisicing elit. A laborum sequi nihil nisi 
-                    laudantium, molestiae eaque porro incidunt excepturi, 
-                    optio aliquam ipsa repellat est? Doloremque, eaque sed. 
-                    Ex deserunt laudantium eaque necessitatibus ullam veniam 
-                    accusamus, quo recusandae esse. Minus et ducimus quasi amet quam 
+                <p>Lorem, ipsum dolor sit amet consectetur
+                    adipisicing elit. A laborum sequi nihil nisi
+                    laudantium, molestiae eaque porro incidunt excepturi,
+                    optio aliquam ipsa repellat est? Doloremque, eaque sed.
+                    Ex deserunt laudantium eaque necessitatibus ullam veniam
+                    accusamus, quo recusandae esse. Minus et ducimus quasi amet quam
                     nam unde, porro reiciendis delectus magnam?</p>
             </div>
         </article>
