--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -60,8 +60,8 @@
     <section class="places">
         <h1>Places</h1>
         <article>
-            <h2>My Home</h2>
-            <div class="price_by_night">$180</div>
+            <h2>My home</h2>
+            <div class="price_by_night">$80</div>
             <div class="information">
                 <div class="max_quest">
                     <h4>2 Guests</h4></div>
@@ -82,8 +82,8 @@
             </div>
         </article>
         <article>
-            <h2>Our Home</h2>
-            <div class="price_by_night">£45</div>
+            <h2>Tiny house</h2>
+            <div class="price_by_night">£65</div>
             <div class="information">
                 <div class="max_quest"><h4>2 Guests</h4></div>
                 <div class="number_rooms"><h4>4 Rooms</h4></div>
@@ -103,8 +103,8 @@
             </div>
         </article>
         <article>
-            <h2>Your Home</h2>
-            <div class="price_by_night">$57</div>
+            <h2>A suite</h2>
+            <div class="price_by_night">$190</div>
             <div class="information">
                 <div class="max_quest"><h4>4 Guests</h4></div>
                 <div class="number_rooms"><h4>7 Rooms</h4></div>
